{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerCharacter",
            "id": "a88756bb-3218-4783-9762-c062c5b73075",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "848aefa2-734c-4852-a496-6063727871fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c0583e71-4147-45df-932b-bd8995a6d4ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ExecuteCom",
                    "type": "Button",
                    "id": "ca1bdb8d-f0e4-47a6-805f-ebb203b3619c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CmdOff",
                    "type": "Button",
                    "id": "186143e2-78d0-4ce1-b53c-d497671e993d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CmdOn",
                    "type": "Button",
                    "id": "08f8a21b-dab7-4b84-999c-ff3a60a4a693",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CmdSelect",
                    "type": "Button",
                    "id": "2f1335a5-99bc-447f-9aa1-90f1cc352f61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StackSp",
                    "type": "Value",
                    "id": "0238c7b8-6154-4ef6-864b-0bcbbbc0c5b8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "YMove",
                    "type": "Button",
                    "id": "515f056a-d608-4171-80ad-6f630d20d205",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "f3af0f6d-2e8b-4264-9611-78ebc556a49c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "Scale(factor=0.5),Clamp(min=-1,max=1)",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "65d1755a-d1e4-4b6f-b0ee-a3eac76eb08a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "95c5430a-8a18-4106-93e5-cb5eace363c8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6114afb4-9c94-4f0a-bf5c-13aebc699e24",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6793dffb-5f0d-4aba-8850-c87e7a796ff4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "105765b9-47fe-4fa8-b21f-25662dc9aba0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b4b001f-a333-4800-b1e2-418869c85588",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CmdOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76267eb9-84c8-4176-bc11-2e09363567f7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "CmdOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "e7e4b0a7-82a6-4501-9ad9-66babb6b612e",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExecuteCom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "5a890b90-44e2-43d6-8082-67f983fc3908",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExecuteCom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "f0c2000b-d9a7-4e05-ba92-162b592f9a58",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExecuteCom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "243175b0-8f84-4b1d-ab4e-57a66519aaf7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CmdSelect",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "17969292-8a94-42ca-b99f-56efd1f586cb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CmdSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a1b07ff2-ad52-437d-9b9e-146be23c42a1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CmdSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "99d11d5b-2a8f-41ee-81f0-2172ed019f88",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StackSp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "eba26df1-dc8e-488e-b56c-1aa54a9b5b12",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2dcc5650-175f-48db-9129-756b17945d6a",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4c91c728-5ba1-4ee5-8a8d-3241aa4cbfe1",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CheatController",
            "id": "40d9e923-932d-45db-9e2c-8e652d28c7e4",
            "actions": [
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "a6a1c128-9704-4a15-95c6-e938ae9b81a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleDebug",
                    "type": "Button",
                    "id": "7aea200f-f150-4b28-93d6-e44044cd72cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cec63f5b-0b78-4f17-9f8e-c9a58ba9ae29",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "343460dc-ac06-4e63-b6c5-d63413670b6c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}